chore: fix overflow-x

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -46,6 +46,7 @@
 
 .przychodnia-desc {
   background-color: #42cf72;
+  width: 100%;
 }
 
 .przychodnia-description {
